Bug 381659: "Multipart/Encrypted" not supported, only "multipart/encrypted". r+sr=bienvenu